# minisat-definitions

./: .gitmodules  CMakeLists.txt  setup.sh
src/: Main.cpp  Util.h
